# cmake-easy

./: LICENSE  README.md
sections/01-learning/: 00-comments.cmake  02-message.cmake  03-message-quotes.cmake  04-variables.cmake  05-functions-return.cmake  05-functions.cmake  06-lists.cmake  07-if-else.cmake  08-if-var.cmake  09-test-integers.cmake  10-test-strings.cmake  11-test-versions.cmake  12-test-files.cmake  13-args.cmake  14-arrays.cmake  20-write-file.cmake  README.md
sections/01-learning/01-hello/: CMakeLists.txt
sections/01-learning/16-message-context/: start.sh
sections/01-learning/17-simple-project/: CMakeLists.txt  README.txt  main.cpp
sections/01-learning/19-enforce-version/: CMakeLists.txt  run.sh
sections/01-learning/projects/18-src-build/: CMakeLists.txt  README.txt
sections/01-learning/projects/18-src-build/src/: main.cpp  nullable.cpp
sections/01-learning/scripts/: 00-helloworld.cmake  01-comments.cmake  02-message.cmake  03-message-quotes.cmake  04-variables.cmake  04-vars-unknown.cmake  05-blocks.cmake  05-functions-return.cmake  05-functions.cmake  06-macros.cmake  07-if-else.cmake  08-if-var.cmake  12-test-files.cmake  13-args.cmake  14-lists-functions.cmake  14-lists-more.cmake  14-lists.cmake  15-loops-of-control.cmake  18-command-execute-portable.cmake  18-command-execute.cmake  19-if-else.cmake  22-test-integers.cmake  23-test-strings.cmake  24-test-versions.cmake  25-test-regex.cmake  26-arithmetic.cmake  36-test-files-basics.cmake  37-test-files-more.cmake  38-files-transfer.cmake  38-test-files.cmake  39-exit-code-ok.cmake  (+3 more)
(+30 files in other folders)
